[tool.poetry]
name = "lakehouse-tools"
version = "0.1.0"
description = "Tools for Data Lakehouses"
authors = ["Alexander Wagner <wagner.candor@gmail.com>"]
readme = "README.md"
packages = [{include = "lakehouse_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
delta-spark = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
chispa = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"